# study-palette

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  DEVELOPMENT.md  LICENSE  README.md  dev  netlify.toml  pyproject.toml  render.yaml
.github/workflows/: test-backend.yaml  test-frontend.yaml
api/: README.md  db.py  load_seed_data.py  main.py
api/seed_data/: TOY-Condition--data.jsonl  TOY-Demography--data.jsonl  TOY-MeasurementObservation--data.jsonl  TOY-Observation--data.jsonl  TOY-Participant--data.jsonl
api/tests/: test_api.py
docker/: api.Dockerfile
docs/: README.md  index.html
src/study_palette/: __init__.py
ui/: README.md  bun.lockb  index.html  package.json  tsconfig.app.json  vite.config.ts
ui/src/: App.test.tsx  App.tsx  OverviewCharts.tsx  StudyOverview.tsx  demoData.ts  index.css  types.ts
