[project]
name = "study-palette"
version = "0.0.0"
description = "BDC Meta-Analysis Study Builder & Query Tool"
authors = [{ name = "Corey Cox", email = "corey@tislab.org" }]
requires-python = ">=3.11,<=3.13"
readme = "README.md"
license = "MIT"
dependencies = [
    "duckdb>=1.2,<2",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.2",
    "tox>=4.16.0",
    "tox-uv>=1.11.3",
    "pre-commit>=3.3.3",
    "ruff>=0.12.9",
    "coverage>=7.3.0",
    "pytest-cov>=6.0",
    "codespell>=2.4.1",
    "httpx>=0.28",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
target-version = "py312"
line-length = 120
include = [
    "api/**/*.py",
]

[tool.ruff.lint]
fixable = ["ALL"]
select = [
    "B",  # bugbear
    "D",  # pydocstyle
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "I",  # isort
    "S",  # flake8-bandit
    "W",  # Warning
]
extend-ignore = [
    "D100",  # `missing-docstring-in-public-module`
    "D104",  # `missing-docstring-in-public-package`
    "D211",  # `no-blank-line-before-class`
    "D212",  # `multi-line-summary-first-line`
    "D203",  # `blank-line-before-docstring`
    "S101",  # `assert`
]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"api/tests/**/*.py" = ["D"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.codespell]
skip = "*.po,*.ts,.git,pyproject.toml"
count = ""
quiet-level = 3

[tool.coverage.run]
source = ["api"]
omit = ["api/tests/*", "*/__init__.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
]
